--- a/greenfield.app/config.toml
+++ b/greenfield.app/config.toml
@@ -4,6 +4,8 @@ title = "Greenfield"
 theme = "kube"
 description = "Cloud Desktop [Beta]"
 Paginate = 4
+googleAnalytics = "UA-136678329-3"
+
 [Params]
   RSSLink = "/index.xml"
   author = "udev.be" # add your company name
@@ -15,10 +17,10 @@ Paginate = 4
     name = "Docs"
     weight = -100
     url = "/docs/"
-[[menu.main]]
-    name = "Blog"
-    weight = -100
-    url = "/blog/"
+#[[menu.main]]
+#    name = "Blog"
+#    weight = -100
+#    url = "/blog/"
 [[menu.main]]
     name = "Faq"
     weight = -100
