--- a/greenfield.app/config.toml
+++ b/greenfield.app/config.toml
@@ -17,10 +17,10 @@ googleAnalytics = "UA-136678329-3"
     name = "Docs"
     weight = -100
     url = "/docs/"
-#[[menu.main]]
-#    name = "Blog"
-#    weight = -100
-#    url = "/blog/"
+[[menu.main]]
+    name = "Blog"
+    weight = -100
+    url = "/blog/"
 [[menu.main]]
     name = "Faq"
     weight = -100
